--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -2,7 +2,8 @@ name: Ejercicio 3
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   lint:
@@ -45,7 +46,7 @@ jobs:
           echo "Version: 1.0.0" >> build-info.txt
 
       - name: Subir artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4   
         with:
           name: build-artifact
           path: build-info.txt
