--- a/.github/workflows/ejercicio4.yml
+++ b/.github/workflows/ejercicio4.yml
@@ -7,13 +7,11 @@ on:
 
 jobs:
   test-multi-os:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-          - windows-latest
-          - macos-latest
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout del código
@@ -28,7 +26,7 @@ jobs:
         run: npm test
 
       - name: Mostrar sistema operativo
-        run: echo "Sistema operativo: ${{ runner.os }}"
+        run: 'echo "Sistema operativo: ${{ runner.os }}"'
 
       - name: Solo en Linux
         if: runner.os == 'Linux'
